:hammer:Fixed Javascript error causing dark mode icon to look weird.

--- a/assets/src/sass/components/_darkmode.scss
+++ b/assets/src/sass/components/_darkmode.scss
@@ -5,7 +5,6 @@
       opacity: 0.8;
     }
   }
-
   i {
     position: absolute;
     bottom: 20px;
@@ -15,13 +14,15 @@
   }
 
   .sun {
-    display: none;
+    visibility: hidden;
   }
 }
+
 //Dark mode//
 .outer-dark {
   background: linear-gradient(to top, #412b6c, #13123c, #02020e);
-  height: 105vh;
+
+
   .title, .toggle {
     color: white;
 
@@ -30,22 +31,23 @@
 
       background: rgba(255, 255, 255, 0.85);
       box-shadow: 0 0 60px #fefefe,
-      0 0 60px #fefefe;
-    }
-
-    i {
-      position: absolute;
-      bottom: 20px;
-      right: 20px;
-      font-size: 2em;
-      color: #EBC815;
-    }
-
-    .moon {
-      display: none;
+        0 0 60px #fefefe;
     }
   }
+
+  i {
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+    font-size: 2em;
+    color: #EBC815;
+  }
+
+  .moon {
+    visibility: hidden;
+  }
 }
+
 
 //this styles the label, text indent gets rid of the text, everything else is just styling the button.
 label {
@@ -66,6 +68,8 @@ label {
 input:checked + label {
   background: #eeeeee;
 }
-
+input#switch{
+  display:none;
+}
 
 
